Fix z-index for record viewer

--- a/src/components/RecordViewer/RecordViewer.scss
+++ b/src/components/RecordViewer/RecordViewer.scss
@@ -19,6 +19,7 @@
   border-radius: 4px;
   outline: none;
   padding: 20px;
+  z-index: 1;
 }
 
 .record-viewer {
